--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -62,9 +62,9 @@ function myMap() {
     <div id="map"></div>
     <script>
       function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
+        var uluru = {lat: <%= @lat %>, lng: <%= @lon %>};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
+          zoom: 10,
           center: uluru
         });
         var marker = new google.maps.Marker({
