--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -62,7 +62,7 @@ function myMap() {
     <div id="map"></div>
     <script>
       function initMap() {
-        var uluru = {lat: <%= @lat %>, lng: <%= @lon %>};
+        var uluru = {lat: <%= @lat %>, lng: <%= @lng %>};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 10,
           center: uluru
